Finished the last exercise for 03-css

--- a/03-css/06-media-queries.html
+++ b/03-css/06-media-queries.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li><a href="#">home</a></li>
-          <li><a href="#">parmesan</a></li>
-          <li><a href="#">manchego</a></li>
+      <nav class="navbar">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#">home</a></li>
+          <li class="nav-item"><a href="#">parmesan</a></li>
+          <li class="nav-item"><a href="#">manchego</a></li>
         </ul>
       </nav>
     </header>
