--- a/06-bootstrap/01-cards.html
+++ b/06-bootstrap/01-cards.html
@@ -14,5 +14,29 @@
   <body>
     <h1>01 - Cards</h1>
     <!-- Add your code here -->
+      <div class="grid-container">
+        <header class="header">Featured Item></header>
+          <section class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special Title Treatment</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="#" class="btn btn-primary">Click Me</a>
+            </div>
+            <div class="card-footer text-muted">
+              Last updated 3 mins ago
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special Title Treatment</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="#" class="btn btn-primary">Click Me</a>
+            </div>
+            <div class="card-footer text-muted">
+              Last updated 3 mins ago
+            </div>
+          </div>
+      </section>
+    </div>
   </body>
 </html>
