--- a/06-bootstrap/02-grid.html
+++ b/06-bootstrap/02-grid.html
@@ -13,6 +13,34 @@
   </head>
   <body>
     <h1>02 - Bootstrap Grid</h1>
-    <!-- Add your code here -->
+    <div class="custom-grid-container container">
+      <div class="row">
+        <div class="col-6">
+          <div class="box">One</div>
+        </div>
+        <div class="col-6">
+          <div class="box">Two</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-9">
+          <div class="box">Three</div>
+        </div>
+        <div class="col-3">
+          <div class="box">Four</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <div class="box">Five</div>
+        </div>
+        <div class="col-4">
+          <div class="box">Six</div>
+        </div>
+        <div class="col-4">
+          <div class="box">Seven</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
