--- a/06-bootstrap/01-cards.html
+++ b/06-bootstrap/01-cards.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="custom-card-container container">
       <div class="row">
         <div class="col-md-6">
           <div class="card mb-4">
