--- a/06-bootstrap/01-cards.html
+++ b/06-bootstrap/01-cards.html
@@ -17,12 +17,13 @@
         <div class="col-md-6">
           <div class="card mb-4">
             <div class="card-header">
-              Featured Items
+              Featured
             </div>
+            <div class="grey-box"></div>
             <div class="card-body">
               <h5 class="card-title">Special Title Treatment</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Click me</a>
             </div>
             <div class="card-footer text-muted">
               Last updated 3 mins ago
@@ -32,12 +33,13 @@
         <div class="col-md-6">
           <div class="card mb-4">
             <div class="card-header">
-              Featured Items
+              Featured
             </div>
+            <div class="grey-box"></div>
             <div class="card-body">
               <h5 class="card-title">Special Title Treatment</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Click me</a>
             </div>
             <div class="card-footer text-muted">
               Last updated 3 mins ago
