--- a/01-html/02-images.html
+++ b/01-html/02-images.html
@@ -10,11 +10,11 @@
     <main>
       <!-- Neither website works anymore, but this is how you would use an API for an image -->
       <figure>
-        <img src="http://placekitten.com/200/150" alt="An adorable little kitten!" width="200" height="150"/>
+        <img src="http://placebear.com/200/150" alt="An adorable little kitten!" width="200" height="150"/>
         <figcaption>Kittens Rule!</figcaption>
       </figure>
       <figure>
-        <img src="https://place-puppy.com/200/150" alt="An adorable little puppy!" width="200" height="150"/>
+        <img src="https://placebear.com/200/150" alt="An adorable little puppy!" width="200" height="150"/>
         <figcaption>Puppies Rule!</figcaption>
       </figure>
     </main>
