--- a/01-html/03-table.html
+++ b/01-html/03-table.html
@@ -16,14 +16,15 @@
   </head>
   <body>
     <main>
+      <h1>Exercise 03 - Table</h1>
       <table>
         <!-- Add your code here -->
-        <thread>
+        <thead>
           <tr>
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
-        </thread>
+        </thead>
         <tbody>
           <tr>
             <td>Spongebob</td>
