--- a/01-html/04-form.html
+++ b/01-html/04-form.html
@@ -10,34 +10,37 @@
 
 <body>
   <main>
-    <form action="../04-form.html" method="post">
-      <!-- Add your code here -->
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" placeholder="Full Name" required><br><br>
+    <h1>Form</h1>
+    <form>
+      <form action="../04-form.html" method="post">
+        <!-- Add your code here -->
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Full Name" required><br><br>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" placeholder="name@pdx.edu" required><br><br>
-      
-      <fieldset>
-        <legend>Favorite Character:</legend>
-        <input type="radio" id="spongebob" name="character" value="spongebob" required>
-        <label for="spongebob">Spongebob</label><br>
-        <input type="radio" id="sandy" name="character" value="sandy" required>
-        <label for="sandy">Sandy</label><br>
-        <input type="radio" id="patrick" name="character" value="patrick" required>
-        <label for="patrick">Patrick</label><br>
-      </fieldset>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="name@pdx.edu" required><br><br>
+        
+        <fieldset>
+          <legend>Favorite Character:</legend>
+          <input type="radio" id="spongebob" name="character" value="spongebob" required>
+          <label for="spongebob">Spongebob</label><br>
+          <input type="radio" id="sandy" name="character" value="sandy" required>
+          <label for="sandy">Sandy</label><br>
+          <input type="radio" id="patrick" name="character" value="patrick" required>
+          <label for="patrick">Patrick</label><br>
+        </fieldset><br>
 
-      <fieldset>
-        <legend>Are you a fan of the show?</legend>
-        <input type="checkbox" id="yes, seen everything" name="fan" value="yes, seen everything" required>
-        <label for="yes, seen everything">Yes, I have watched all the episodes!</label><br>
-        <input type="checkbox" id="yes, memes good" name="fan" value="yes, memes good" required>
-        <label for="yes, memes good">Yes, it's got the best memes.</label><br>
-      </fieldset>
+        <fieldset>
+          <legend>Are you a fan of the show?</legend>
+          <input type="checkbox" id="yes, seen everything" name="fan" value="yes, seen everything" required>
+          <label for="yes, seen everything">Yes, I have watched all the episodes!</label><br>
+          <input type="checkbox" id="yes, memes good" name="fan" value="yes, memes good" required>
+          <label for="yes, memes good">Yes, it's got the best memes.</label><br>
+        </fieldset><br>
 
-      <input type="submit" value="Submit">
-      <input type="reset" value="Reset">
+        <input type="submit" value="Submit">
+        <input type="reset" value="Reset">
+      </form>
 
     </form>
   </main>
