Fixed merge issue as well as prettiered every html file

--- a/01-html/01-lists.html
+++ b/01-html/01-lists.html
@@ -11,8 +11,7 @@
       <h1>Grocery List</h1>
       <ol>
         <li>Eggs</li>
-        <li>
-          <li>Milk</li>
+        <li>Milk
             <ul>
               <li>2%</li>
               <li>Almond Milk</li>
