Ran w3c on all html and css files

--- a/01-html/02-images.html
+++ b/01-html/02-images.html
@@ -20,7 +20,7 @@
       </figure>
       <figure>
         <img
-          src="https://placebear>.com/200/150"
+          src="https://placebear.com/200/150"
           alt="An adorable little puppy!"
           width="200"
           height="150"
